3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

No functional changes, just compilation warnings / Doxygen stuff.
---
Add missing includes.
 types/book/book.c
 types/identify_altar/identify_altar.c (also fix missing argument)
 types/item_transformer/item_transformer.c
 types/transport/transport.c
---
Add newline at end.
 types/common/common_apply.c
 types/trigger/trigger.c
---
Add Doxygen path info to distinguish files.
 common/button.c
 random_maps/exit.c
 server/alchemy.c apply.c rune.c spell_effect.c
 types/button/button.c
 types/exit/exit.c
 types/rune/rune.c
 types/spell_effect/spell_effect.c
 utils/bwp.c
Ryo 2007-02-09

Remove static buffer from ob_describe(). Make op some parameter const.
 include/ob_methods.h sproto.h typesproto.h
 server/c_object.c ob_methods.c
 types/common/describe.c
 types/legacy/megacy_describe.c
Ryo 2007-02-09

Doxyfile: Adjust Doxyfile options to create more information in the
  documentation.
Alex Schultz 2007-02-09

Remove static buffer from query_short_name().
 common/item.c object.c
 include/libproto.h
 server/gods.c player.c plugins.c skills.c spell_effect.c
Ryo 2007-02-09

common/item.c: fix documentation.
--
Remove some more static buffers.
 common/item.c info.c readable.c
 include/libproto.h
 server/plugins.c spell_effect.c
 types/common/describe.c
Ryo 2007-02-09

Fix a few compiler warnings.  Most were just unused variables, but
some in server/c_object.c had returns without values.
Files: server/c_object.c server/monster.c server/player.c server/weather.c 
MSW 2007-02-08

Remove static buffer for query_name().
 common/item.c
 include/libproto.h