@@ -413,5 +413,5 @@ extern int load_object(FILE *fp, object *op, int bufstate, int map_flags);
 extern int set_variable(object *op, char *buf);
 extern void init_vars(void);
 extern void free_loader(void);
-extern char *get_ob_diff(object *op, object *op2);
+extern void get_ob_diff(object *op, object *op2, char* buf, int size);
 extern void save_object(FILE *fp, object *op, int flag);
