@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Remove static buffer for get_ob_diff().
+ common/object.c loader.l
+ include/libproto.h
+ server/c_wiz.c
+Ryo 2007-02-10
+
 No functional changes, just compilation warnings / Doxygen stuff.
 ---
 Add missing includes.
